compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Unexpected tokens
        --> <source>:10:36
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                    ^^^^
error: Unexpected tokens
        --> <source>:10:41
         |
      10 |     public var precedence = g1[((g1, g2), g3), g4];
         |                                         ^^^^
